--- a/src/resource/views/users/home.hbs
+++ b/src/resource/views/users/home.hbs
@@ -19,18 +19,10 @@
     <div class="product">
       <a href="/product/{{this.slug}}">
         <img src="uploads/{{this.avatar}}" alt="" id="product-1">
+        <p id="product-price"><del>123</del></p>
         <p id="product-price">{{this.price}}</p>
         <p id="product-details">{{this.name}}</p>
       </a>
-      
-      <span class="product-button">
-        <div>
-          <i class="fi fi-rr-shopping-cart-add"></i> 
-        </div>
-        <div>
-          <i class="fi fi-rr-heart"></i>
-        </div> 
-      </span> 
     </div>
     {{/each}}
     
@@ -57,15 +49,6 @@
         <p id="product-price">{{this.price}}</p>
         <p id="product-details">{{this.name}}</p>
       </a>
-      
-      <span class="product-button">
-        <div>
-          <i class="fi fi-rr-shopping-cart-add"></i> 
-        </div>
-        <div>
-          <i class="fi fi-rr-heart"></i>
-        </div> 
-      </span> 
     </div>
     {{/each}}
   </div>
@@ -91,15 +74,6 @@
         <p id="product-price">{{this.price}}</p>
         <p id="product-details">{{this.name}}</p>
       </a>
-      
-      <span class="product-button">
-        <div>
-          <i class="fi fi-rr-shopping-cart-add"></i> 
-        </div>
-        <div>
-          <i class="fi fi-rr-heart"></i>
-        </div> 
-      </span> 
     </div>
     {{/each}}
   </div>
