--- a/src/public/css/userHeader.css
+++ b/src/public/css/userHeader.css
@@ -67,6 +67,22 @@ header {
   .header-button {
     padding: 0 10px 0 10px; 
 
+    .orders {
+      text-decoration: none;
+      position: relative;
+      display: inline-block;
+      
+      .orders-quantity {
+        position: absolute;
+        top: -5px;
+        right: -5px;
+        padding: 5px 10px;
+        border-radius: 50%;
+        background-color: red;
+        color: white;
+      }
+    }
+      
     a {
       text-decoration: none;
       color: black;
@@ -89,6 +105,7 @@ header {
   .dropdown-avatar {
     position: relative;
     display: inline-block;
+    padding-left: 10px;
   
     .avatar {
       display: none; 
@@ -120,7 +137,7 @@ header {
 
 @media screen and (max-width: 700px) {
   .header-button {
-    i {
+    i, span {
       display: none;
     };
   };
