--- a/src/resource/views/partials/adminSidebar.hbs
+++ b/src/resource/views/partials/adminSidebar.hbs
@@ -1,6 +1,6 @@
 <div class="admin-sidebar-container">
   <div class="admin-account">
-    <img src="https://scontent.fhan2-4.fna.fbcdn.net/v/t39.30808-1/405336191_817069390220900_4487704995758823798_n.jpg?stp=dst-jpg_p320x320&_nc_cat=110&ccb=1-7&_nc_sid=5740b7&_nc_eui2=AeEW2M-6gViqulS9fWIco5WDJSytYAIOTzglLK1gAg5POMOZ244gW29SzKfNhNbnYHWa0R8TYbZNROsM_V-ZLSd0&_nc_ohc=jW92fGDnnlcAX9Mf_GQ&_nc_ht=scontent.fhan2-4.fna&oh=00_AfAJTp-OwcneSq4zkMCIoQN_6qem3NDdSwhtgbCB5yPhbg&oe=65BD3E05" />
+    <img src="https://scontent.fhan20-1.fna.fbcdn.net/v/t39.30808-6/407842795_816972246897281_6146221013070996008_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=dd5e9f&_nc_eui2=AeEOTJ6a9Y5eJBfwa6N0_lQ-RTSqpruNgfZFNKqmu42B9uQbv6DfHeIPanb061IGVIezorkFPofMERZj-gFOglE4&_nc_ohc=TLbLgsYotTkAX-iZPYr&_nc_ht=scontent.fhan20-1.fna&oh=00_AfD77hKhKRJr1secNvBYe0IG761Y6LhCWBJZSKBdyje1kg&oe=65D42A5A" />
     <div>
       <p>Xin chào Quỳnh Ly,</p>
       <p id="welcome-text"></p>
