--- a/src/resource/views/partials/userNavigate.hbs
+++ b/src/resource/views/partials/userNavigate.hbs
@@ -41,15 +41,15 @@
         <div class="dropdown-content-dropright-content">
           <div class="column">
             <div class="column-1">    
-              <a href="">Phấn má</a>
-              <a href="">Mascara</a>
-              <a href="">Kẻ mắt</a>
+              <a href="/all-products/phan-ma">Phấn má</a>
+              <a href="/all-products/mascara">Mascara</a>
+              <a href="/all-products/ke-mat">Kẻ mắt</a>
             </div>
 
             <div class="column-2">    
-              <a href="">Kem chống nắng</a>
-              <a href="">Che khuyết điểm</a>
-              <a href="">Son</a>
+              <a href="/all-products/kem-chong-nang">Kem chống nắng</a>
+              <a href="/all-products/che-khuyet-diem">Che khuyết điểm</a>
+              <a href="/all-products/son">Son</a>
             </div>
           </div>
         </div>  
