--- a/src/public/css/userAllProducts.css
+++ b/src/public/css/userAllProducts.css
@@ -116,3 +116,26 @@
     i { color: white }
   }
 }
+
+.see-more-button {
+  display: flex; 
+  align-items: center; 
+  justify-content: center; 
+  padding: 10px 0 10px 0;
+
+  button {
+    width: 150px; 
+    height: 30px;
+    background-color: white;
+    color: #D1A6A6;
+    border: 1px solid #D1A6A6;
+    border-radius: 5px;
+    cursor: pointer;
+  };
+
+  button:hover {
+    background-color: #D1A6A6;
+    color: white;
+    border: 1px solid white ;
+  }
+}
