--- a/src/public/css/userOrders.css
+++ b/src/public/css/userOrders.css
@@ -1,7 +1,22 @@
 .order-container {
   margin-top: 170px;
-  
 
+  .process {
+    display: flex;
+    align-items: center;
+    justify-content:center;
+    padding: 10px;
+
+    span {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background-color: white;
+      border-radius: 50%;
+      width: 20px;
+    }
+  }
+  
   .cart, .delivery, .contact-info, .total-expense {
     background-color: white;
 
@@ -48,7 +63,6 @@
   }
 
   .contact-info {
-    display: grid;
     input {
       max-width: 50%;
       height: 30px;
@@ -56,4 +70,29 @@
       border: 1px solid black;
     }
   }
+
+  .button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 10px;
+
+    button {
+      width: 150px; 
+      height: 30px;
+      background-color: white;
+      color: #D1A6A6;
+      border: 1px solid #D1A6A6;
+      border-radius: 5px;
+      cursor: pointer;
+    };
+  
+    button:hover {
+      background-color: #D1A6A6;
+      color: white;
+      border: 1px solid white ;
+    }
+  }
+
+  
 }
