--- a/src/resource/views/users/product.hbs
+++ b/src/resource/views/users/product.hbs
@@ -56,19 +56,33 @@
 
 <script>
   var getAddToCart = document.querySelector('div.add-to-cart-btn')
+  var icon = getAddToCart.querySelector('i.fi-rr-shopping-cart-add')
   var myObjFromStorage = JSON.parse(localStorage.getItem('product_cart_count')) || { }
   var myObj = {
-    localCounting: myObjFromStorage.localCounting || 0
+    localCounting: myObjFromStorage.localCounting || 0,
+    isClicked: myObjFromStorage.isClicked,
+    clickedProduct: 
   } 
     
   localStorage.setItem('product_cart_count', JSON.stringify(myObj))
   myObj.localCounting = myObjFromStorage.localCounting
 
   getAddToCart.onclick = function() {
-    myObj.localCounting++
+    
+    if (getAddToCart.style.backgroundColor === '') {
+      getAddToCart.style.backgroundColor = '#D1A6A6'
+      icon.style.color = 'white'
+      myObj.isClicked = true
+      myObj.localCounting++
+    } else {
+      getAddToCart.style.backgroundColor = ''
+      icon.style.color = '#D1A6A6'
+      myObj.isClicked = false
+      myObj.localCounting--
+    }
     localStorage.setItem('product_cart_count', JSON.stringify(myObj));
-    console.log(myObj)
     document.dispatchEvent(new CustomEvent('cartUpdated'));
+    console.log(myObj)
   }
 
 </script>
