--- a/src/resource/views/layouts/users.hbs
+++ b/src/resource/views/layouts/users.hbs
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="/css/userAdvertise.css">
   <link rel="stylesheet" href="/css/userAllProducts.css">
   <link rel="stylesheet" href="/css/userFooter.css">
+  <link rel="stylesheet" href="/css/userFooterNavigate.css">
   <link rel="stylesheet" href="/css/userHeader.css">
   <link rel="stylesheet" href="/css/userHome.css">
   <link rel="stylesheet" href="/css/userIntroduce.css">
@@ -37,5 +38,9 @@
   <footer>
     {{> userFooter}}
   </footer>
+
+  <footerNav>
+    {{> userFooterNavigate}}
+  </footerNav>
 </body>
 </html>
