--- a/src/public/css/userAdvertise.css
+++ b/src/public/css/userAdvertise.css
@@ -55,3 +55,9 @@
     background-color: #717171;
   }
 }
+
+@media screen and (max-width: 700px) {
+  .advertisement {
+    margin-top: 100px
+  };
+}
