--- a/src/public/css/userFooterNavigate.css
+++ b/src/public/css/userFooterNavigate.css
@@ -1,17 +1,52 @@
-nav {
-  background-color: #D1A6A6;
-  position: fixed;
-  top: 100px;
+footerNav {
   width: 100%;
-  height: 70px;
   z-index: 2;
-  align-items: center;
-  display: flex;
-  gap: 20px;
 
-  .navigation-bar {
-    display: flex;
+  .drop-up-menu {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
     height: 100%;
+    background-color: white;
+    margin-top: 100px;
+    display: none;
+
+    a, p {
+      padding: 10px;
+      display: flex; 
+      justify-content: space-between;
+      cursor: pointer;
+      align-items: center;
+      text-decoration: none;
+      color: black;
+      margin-block-start: 0;
+      margin-block-end: 0;
+    };
+
+    a:hover, p:hover { 
+      color: red;
+      i { color: red } 
+    }
+
+    .column {
+      display: none;
+      position: absolute;
+      top: 0;
+    }
+  }
+
+  .footer-menu {
+    background-color: #D1A6A6;
+    position: fixed;
+    top: auto;
+    bottom: 0;
+    width: 100%;
+    height: 70px;
+    z-index: 2;
+    align-items: center;
+    display: flex;
+    justify-content: space-around;
 
     i {
       font-size: 20px;
@@ -20,7 +55,7 @@ nav {
     };
   }
 
-  .title, .dropdown-title {
+  .title, .footer-drop-up-list-title {
     display: flex; 
     gap: 10px; 
     align-items: center; 
@@ -37,23 +72,22 @@ nav {
     }
   }
 
-  .title:hover, .dropdown-title:hover {
+  .title:hover, .footer-drop-up-list-title:hover {
     background-color: #ffffff19;
   }
   
-  .dropdown {
-    position: relative;
-    display: inline-block;
+  .footer-drop-up-list {
   
-    .dropdown-content {
-      display: none;
+    .footer-drop-up-list-content {
+      /* display: none; */
       position: absolute;
       background-color: white;
       width: 100%;
+
       z-index: 1;
-      top: 100%;
+      bottom: 100%;
   
-      .dropdown-content-dropright {
+      .drop-up-content-drop-right {
         position: relative;
         display: inline-block;
         width: 100%;          
@@ -79,13 +113,13 @@ nav {
       }
     };
   
-    .dropdown-content-dropright-content {
-      display: none;
+    .drop-up-content-drop-right-content {
+      /* display: none; */
       position: absolute;
       background-color: white;
       width: 200%;
       z-index: 1;
-      top: 0px;
+      top: 0;
       left: 100%;
 
       .column {
@@ -97,20 +131,10 @@ nav {
       display: block;
     } */
   }
-  
-  .dropdown:hover {
-    /* .dropdown-content {
-      display: block;
-    };
-  
-    .dropdown-content-dropright-content {
-      display: none;
-    } */
-  };
 }
 
-@media screen and (max-width: 700px) {
-  nav {
+@media screen and (min-width: 700px) {
+  footerNav {
     display: none
   };
 }
