--- a/src/resource/views/users/product.hbs
+++ b/src/resource/views/users/product.hbs
@@ -57,28 +57,60 @@
 <script>
   var getAddToCart = document.querySelector('div.add-to-cart-btn')
   var icon = getAddToCart.querySelector('i.fi-rr-shopping-cart-add')
-  var myObjFromStorage = JSON.parse(localStorage.getItem('product_cart_count')) || { }
+
+  // get obj from storage first, if not created, return {}
+  var myObjFromStorage = JSON.parse(localStorage.getItem('product_cart_count')) || {}
   var myObj = {
     localCounting: myObjFromStorage.localCounting || 0,
-    isClicked: myObjFromStorage.isClicked,
+    productName: myObjFromStorage.productName || [],
+    allProducts: [
+      product = {
+        name: 'abc',
+        price: 'xyz'
+      },
+    ]
   } 
-    
+  
+  // set value to the myObj, stringify because localStorage only store string type
   localStorage.setItem('product_cart_count', JSON.stringify(myObj))
   myObj.localCounting = myObjFromStorage.localCounting
+  myObj.productName = myObjFromStorage.productName
+  myObj.allProducts = myObjFromStorage.allProducts
+
+  // check if the item has already been added, return the button type to added
+  var listProductLength = myObj.productName.length
+  for (let i = 0; i < listProductLength; ++i) {
+    if (myObj.productName[i] === `{{product.slug}}`) {
+      getAddToCart.style.backgroundColor = '#D1A6A6'
+      icon.style.color = 'white'
+      break
+    } 
+  }
 
   getAddToCart.onclick = function() {
-    
+    // the item has not yet been added, click to add
     if (getAddToCart.style.backgroundColor === '') {
       getAddToCart.style.backgroundColor = '#D1A6A6'
       icon.style.color = 'white'
-      myObj.isClicked = true
+      // add 1 to the cartCounting and store the item slug in the localStorage
       myObj.localCounting++
+      myObj.productName.push(`{{product.slug}}`)
+      myObj.allProducts.push(`{{product.slug}}`)
     } else {
+    // the item has already been added, click to remove
       getAddToCart.style.backgroundColor = ''
       icon.style.color = '#D1A6A6'
-      myObj.isClicked = false
       myObj.localCounting--
+      // minus 1 from the cartCounting and remove the item slug from the localStorage
+      listProductLength = myObj.productName.length
+      for (let i = 0; i < listProductLength; ++i) {
+        if (myObj.productName[i] === `{{product.slug}}`) {
+          myObj.productName.splice(i, 1)
+          myObj.allProducts.splice(i, 1)
+        }
+      }
     }
+
     localStorage.setItem('product_cart_count', JSON.stringify(myObj));
     document.dispatchEvent(new CustomEvent('cartUpdated'));
     console.log(myObj)
