--- a/src/public/css/adminHome.css
+++ b/src/public/css/adminHome.css
@@ -1,5 +1,5 @@
 .admin-greeting {
-  padding-left: 200px;
+  margin-left: 200px;
   display: flex;
   align-items: center;
   justify-content: center;
