--- a/src/resource/views/layouts/admin.hbs
+++ b/src/resource/views/layouts/admin.hbs
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/svg+xml" href="../img/4.jpg" />
+  <link rel="stylesheet" href="/css/adminAllOrders.css">
   <link rel="stylesheet" href="/css/adminCreate.css">
   <link rel="stylesheet" href="/css/adminUpdate.css">
   <link rel="stylesheet" href="/css/adminSidebar.css">
