--- a/src/resource/views/partials/adminSidebar.hbs
+++ b/src/resource/views/partials/adminSidebar.hbs
@@ -10,15 +10,19 @@
   <div class="admin-button">
     <a href="/admin" class="sidebar-button">
       <i class="fi fi-br-home"></i>
-      <p>Trang chủ</p>
+      <p>Trang Chủ</p>
+    </a>
+    <a href="/admin/all-orders" class="sidebar-button">
+      <i class="fi fi-rr-piggy-bank"></i>
+      <p>Đơn Hàng</p>
     </a>
     <a href="/admin/create" class="sidebar-button">
       <i class="fi fi-br-layer-plus"></i>
-      <p>Thêm sản phẩm</p>
+      <p>Thêm Sản Phẩm</p>
     </a>
     <a href="/admin/update" class="sidebar-button">
       <i class="fi fi-rr-box-open"></i>
-      <p>Tổng sản phẩm</p>
+      <p>Tổng Sản Phẩm</p>
     </a>
     <a href="/admin/trash" class="sidebar-button">
       <i class="fi fi-br-trash"></i>
@@ -26,23 +30,23 @@
     </a>
     <a href="/admin/introduce-update" class="sidebar-button">
       <i class="fi fi-bs-link-alt"></i>
-      <p>Sửa giới thiệu</p>
+      <p>Sửa Giới Thiệu</p>
     </a>
     <a href="/admin/footer-update" class="sidebar-button">
       <i class="fi fi-bs-link-alt"></i>
-      <p>Sửa chân trang</p>
+      <p>Sửa Chân Trang</p>
     </a>
     <a href="/home" class="sidebar-button">
       <i class="fi fi-br-browser"></i>
-      <p>Giao diện chính</p>
+      <p>Trang Người Dùng</p>
     </a>
     <a href="/admin/update-profile" class="sidebar-button">
       <i class="fi fi-br-circle-user"></i>
-      <p>Cập nhật thông tin cá nhân</p>
+      <p>Cập Nhật Thông Tin Cá Nhân</p>
     </a>
     <a href="/home" class="sidebar-button">
-      <i class="fi fi-br-circle-user"></i>
-      <p>Đăng xuất</p>
+      <i class="fi fi-br-exit"></i>
+      <p>Đăng Xuất</p>
     </a>
   </div>
 </div>
