--- a/src/public/css/userProduct.css
+++ b/src/public/css/userProduct.css
@@ -103,21 +103,38 @@
       word-wrap: break-word;
     }
 
+    .quantity {
+      display: flex;
+      align-items: center;
+      justify-content: start;
+      width: fit-content;
+      gap: 10px;
+      padding: 5px 10px;
+      p {
+        margin-block-start: 0px;
+        margin-block-end: 0px;
+        border: 1px solid #D1A6A6;
+        padding: 10px
+      };
+      i { cursor: pointer }
+      margin-bottom: 5px;
+    }
+
     .button {
       display: flex;
       align-items: center;
       gap: 5px;
-    
-      i { color: #D1A6A6; font-size: 15px };
-    
+        
       div {
         display: flex;
         align-items: center;
         justify-content: center;
-        width: 100px;
+        width: fit-content;
         height: 30px;
         border: 1px solid #D1A6A6;
         border-radius: 5px;
+        padding: 10px;
+        p, a { color: #D1A6A6; text-decoration: none }
       };
     
       div:hover {
